akka-split-brain-arbitrator/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: akka-split-brain-arbitrator
  namespace: open-cluster-management
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: akka-split-brain-arbitrator
    weight: 100
  port:
    targetPort: http
